feat: changing the method findAll for a sortedmethod