@@ -4,9 +4,11 @@ import com.devsuperior.demo.dto.CityDTO;
 import com.devsuperior.demo.entities.City;
 import com.devsuperior.demo.repositories.CityRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CityService {
@@ -14,9 +16,10 @@ public class CityService {
     @Autowired
     private CityRepository repository;
 
-    public List<CityDTO> findAll() {
-        List<City> result = repository.findAll();
-        return result.stream().map(x -> new CityDTO(x)).toList();
+    public List<CityDTO> findAllSorted() {
+        Sort sortByName = Sort.by("name");
+        List<City> cities = repository.findAll(sortByName);
+        return cities.stream().map(CityDTO::new).collect(Collectors.toList());
     }
 
     public CityDTO insert(CityDTO dto) {
